# CppTrendingStudentManage

./: .gitignore  CMakeLists.txt  README.md  Student.cpp  Student.h
include/: Student.h
src/: Student.cpp  main.cpp
